2002-02-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: do not save value of Options(URLlogs)

2002-02-15  Don Porter <dgp@users.sf.net>

	* tkchat.tcl: added check for required Tk 8.3.2 or better.

2002-02-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Try to cope with more possible HTTP errors in
	fetchPage, msgSend and onlinePage procs. Should always schedule
	another fetch.

2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: correct warnings that procheck noted.

2002-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: noise reduction from the last patch for timeout
	cases. Also added some menu navigation underlines.

2002-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added HTTP error checking to the history fetching
	code and handle the redirection case where /?M=D gets appended to
	the log file root URL.
	Also added some timeouts to the geturl calls to help deal with
	my rubbish HTTP proxy.

2001-12-06  Bruce Hartweg  <brhartweg@bigfoot.com>

	* tkchat.tcl: Move most stuff out of dialog onto menus - cleaned up dialog (now just colors), a few other minor cleanups (also missed from davidw checking in v25 for me was the ability to grab the history logs at startup)

2001-12-05  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Cleaned up things in the "Options Settings" dialog.

2001-11-19  Ryan Casey <scfiead@hotmail.com>

	* tkchat.tcl: Fixed bug of lines being rewritten to the cha
	window on every refresh.

2001-11-14  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Added "Close" button to info windows.
	Added "Save Options" command to the file menu.
	Changed format of config file to be better human readable/editable.

2001-11-13  Ryan Casey <scfiead@hotmail.com>

	* tkchat.tcl: Fixed User Info bug where windows would
	keep popping up on every refresh.

2001-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: minor changes to history handling for speed.